# openeft

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  appveyor.yml  clean_up.py  coding_convention  coding_convention.md  openeft-config.cmake
certroot/: eftnode_cli_ca.crt  eftnode_cli_ca.key  eftnode_cli_client.crt  eftnode_cli_client.csr  eftnode_cli_client.key  eftnode_cli_server.crt  eftnode_cli_server.csr  eftnode_cli_server.key  eftnode_comm_cert.pem  eftnode_comm_key.pem
cmake/: CompileOptions.cmake  FindGRPC.cmake  FindProtobuf.cmake  FindRocksDb.cmake  HealthCheck.cmake
data/: intro
docs/: CMakeLists.txt
docs/manual/: CMakeLists.txt  openeft.tex
scripts/: conv_xsd_to_proto.py  gen_openeft_cli_certs.sh
src/: CMakeLists.txt  eftclass.cpp  eftclass.h  global.h  openeft-version.h  openeft.cpp  openeft.h  openeft_cli.cpp  openeft_cli.h
src/bau/: console.cpp  console.h  control.cpp  dev_notes.txt
src/blockchain/: block.cpp  block.h  merkle_tree.cpp  merkle_tree.h
src/blockchain/proto/: block.proto  transaction.proto
src/blockchain/protos/: batch.proto  block.proto  blockchain.proto  eft_nodes.proto  smart_contract.proto  transaction.proto
src/cfg/: openeft_cfg.h
src/comms/: client_ssl.cpp  client_ssl.h  client_tcp.h  rpc_client_ssl.cpp  rpc_client_ssl.h  rpc_server_ssl.cpp  rpc_server_ssl.h  server_ssl.cpp  server_ssl.h  server_tcp.h
src/config/: config.cpp  config.h  config_cli.cpp  config_cli.h
src/console/: console.h
src/control/: console.cpp  console.h  control.cpp  control.h  control_service.cpp  control_service.h
src/control/protos/: control.proto
src/kernel/protos/: generic.proto
src/log/: log.cpp  log.h
src/network/protos/: eft_net.proto  eft_nodes.proto
src/secmodule/key_mgmt/: gen_cert.h  passwd.cpp  passwd.h
src/tests/: CMakeLists.txt  test_comms.cpp  test_comms.h  test_ec.cpp  test_ec.h  test_ecdh.cpp  test_ecdh.h  test_verify_sig.cpp  test_verify_sig.h
src/tokenization/: vault.h
src/transaction/eft/protos/: eft.proto
src/transaction/fix/protos/: fix.proto
src/transaction/iso20022/protobuf/proto/secl/: secl.001.001.03.proto  secl.002.001.03.proto  secl.003.001.03.proto  secl.004.001.03.proto  secl.005.001.02.proto  secl.006.001.02.proto  secl.007.001.03.proto  secl.008.001.03.proto  secl.009.001.03.proto  secl.010.001.03.proto
src/transaction/iso20022/protos/: dev_notes.txt  iso20022.proto  pain.001.001.08.proto  pain.002.001.09.proto  pain.007.001.08.proto  pain.008.001.07.proto  pain.009.001.05.proto  pain.010.001.05.proto  pain.011.001.05.proto  pain.012.001.05.proto  pain.013.001.06.proto  pain.014.001.06.proto  pain.017.001.01.proto  pain.018.001.01.proto
src/utils/: utils.cpp  utils.h
